--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
+czifile~=2019.7.2
 numpy~=1.20.0
-python-bioformats==4.0.4
+openpyxl >= 3.0.0
+pandas~=1.2.5
+Pillow==8.2.0
 pysimplegui==4.45.0
+python-bioformats==4.0.4
+PyYAML~=5.4.1
 tifffile==2021.4.8
-vtk==9.0.1
