--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,19 @@
 czifile~=2019.7.2
+future~=0.18.2
+matplotlib~=3.4.2
+moviepy~=1.0.3
 numpy~=1.20.3
 openpyxl >= 3.0.0
 pandas~=1.2.5
 Pillow~=8.3.1
 pysimplegui==4.45.0
-python-bioformats==4.0.4
+python-bioformats~=4.0
 PyYAML~=5.4.1
+requests~=2.26.0
 scikit-image~=0.18.2
+scipy~=1.7.0
+seaborn~=0.11.1
+setuptools~=57.0.0
 Shapely~=1.7.1
 tifffile~=2021.7.2
+wheel~=0.36.2
