--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
 czifile~=2019.7.2
-future~=0.18.2
+dask~=2021.11.1future~=0.18.2
 matplotlib~=3.4.2
 moviepy~=1.0.3
 numpy~=1.20.3
 openpyxl >= 3.0.0
 pandas~=1.2.5
-Pillow~=8.3.1
 pysimplegui==4.45.0
 python-bioformats~=4.0
 PyYAML~=5.4.1
