--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 czifile~=2019.7.2
-dask~=2021.11.1future~=0.18.2
+dask~=2021.11.1
+future~=0.18.2
 matplotlib~=3.4.2
 moviepy~=1.0.3
 numpy~=1.20.3
@@ -12,7 +13,7 @@ requests~=2.26.0
 scikit-image~=0.18.2
 scipy~=1.7.0
 seaborn~=0.11.1
-setuptools~=57.0.0
+setuptools~=60.5.0
 Shapely~=1.7.1
-tifffile~=2021.7.2
+tifffile~=2022.2.9
 wheel~=0.36.2
