--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,9 @@ moviepy~=1.0.3
 numpy~=1.20.3
 openpyxl >= 3.0.0
 pandas~=1.2.5
+Pillow~=9.4.0
 pysimplegui==4.45.0
+python-javabridge~=4.0.0
 python-bioformats~=4.0
 PyYAML~=5.4.1
 requests~=2.26.0
@@ -16,4 +18,5 @@ seaborn~=0.11.1
 setuptools~=60.5.0
 Shapely~=1.7.1
 tifffile~=2022.2.9
+vtk~=9.2.0
 wheel~=0.36.2
