--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ readme = "README.md"
 # 'Programming Language' classifiers above, 'pip install' will check this
 # and refuse to install the project if the version does not match. See
 # https://packaging.python.org/guides/distributing-packages-using-setuptools/#python-requires
-requires-python = ">=3.7"
+requires-python = ">=3.6"
 
 # This is either text indicating the license for the distribution, or a file
 # that contains the license
@@ -68,13 +68,14 @@ classifiers = [# Optional
     "Development Status :: 2 - Pre-Alpha",
     # Indicate who your project is intended for
     "Intended Audience :: Developers",
-    "Topic :: Software Development :: Build Tools",
+    "Scientific/Engineering :: Bio-Informatics",
     # Pick your license as you wish
     "License :: OSI Approved :: GNU Affero General Public License v3",
     # Specify the Python versions you support here. In particular, ensure
     # that you indicate you support Python 3. These classifiers are *not*
     # checked by "pip install". See instead "python_requires" below.
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.6",
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
@@ -100,6 +101,7 @@ dependencies = [
     "pandas>=1.2",
     "Pillow>=10.0.0", # for vol_movie_export.py
     "pysimplegui>=4.45.0", # for vol_movie_export.py
+    "future>=0.18.0",
     "python-javabridge>=4.0.0",
     "python-bioformats>=4.0",
     "PyYAML>=5.4.1",
@@ -139,5 +141,5 @@ export = "script:export"
 [build-system]
 # These are the assumed default build requirements from pip:
 # https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
-requires = ["setuptools>=65.0.0", "wheel>=0.40"]
+requires = ["setuptools>=65.0.0", "wheel>=0.40", "numpy>=1.15"]
 build-backend = "setuptools.build_meta"
