--- a/pyproject.toml
+++ b/pyproject.toml
@@ -110,6 +110,7 @@ dependencies = [
     "scipy>=1.10",
     "Shapely>=1.7.1",
     "tifffile>=2023",
+    "typer>=0.9.0",
     "vtk>9.2.0",
 ]
 
@@ -135,8 +136,9 @@ dependencies = [
 
 # The following would provide a command line executable called `sample`
 # which executes the function `main` from this package when invoked.
-[project.scripts]  # Optional
+[project.scripts]
 export = "script:export"
+summary = "scripts.summary:app"
 
 [build-system]
 # These are the assumed default build requirements from pip:
