--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,25 @@
+asyncpool~=1.0
 czifile~=2019.7.2
-dask~=2022.2.0
+dask~=2023.5.0
 future~=0.18.2
-imageio~=2.9.0
-matplotlib~=3.4.2
+imageio~=2.33.1
+matplotlib~=3.7.4
 moviepy~=1.0.3
 numpy~=1.24
 openpyxl>=3.0.0
 pandas~=1.2.5
-Pillow~=10.0.0
-pysimplegui==4.45.0
-python-javabridge~=4.0.0
+Pillow~=10.2.0
+pycromanager~=0.32
+pysimplegui~=4.60.5
 python-bioformats~=4.0
-PyYAML~=5.4.1
-roifile~=2023.2.12
-scikit-image~=0.18.2
+python-javabridge~=4.0.0
+PyYAML~=6.0.1
+roifile~=2023.5.12
+scikit-image~=0.21.0
 scipy~=1.10.0
 seaborn~=0.11.1
-setuptools~=65.5.1
+setuptools~=69.0.3
 Shapely~=1.7.1
-tifffile~=2023.3.21
+tifffile~=2023.7.10
 vtk~=9.2.0
 wheel~=0.40
