--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+aicsimageio~=4.14.0
 asyncpool~=1.0
+beautifulsoup4~=4.12.3
 czifile~=2019.7.2
 dask~=2023.5.0
 future~=0.18.2
@@ -11,8 +13,6 @@ pandas~=1.2.5
 Pillow~=10.2.0
 pycromanager~=0.32
 pysimplegui~=4.60.5
-python-bioformats~=4.0
-python-javabridge~=4.0.0
 PyYAML~=6.0.1
 roifile~=2023.5.12
 scikit-image~=0.21.0
