--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 aicsimageio~=4.14.0
 asyncpool~=1.0
 beautifulsoup4~=4.12.3
+bioformats_jar~=2020.5.27
 czifile~=2019.7.2
 dask~=2023.5.0
 future~=0.18.2
 imageio~=2.33.1
+lmfit~=1.3.1
 matplotlib~=3.7.4
 moviepy~=1.0.3
 numpy~=1.24
