--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,7 +100,7 @@ dependencies = [
     "dask>=2022", # for lazy_image_file.py
     "lmfit>=1.3.1",
     "matplotlib>=3.4",
-    "numpy>=1.24",
+    "numpy>=1.24,<2.0.0",
     "openpyxl>=3.0.0",
     "pandas>=1.2",
     "Pillow>=10.0.0", # for vol_movie_export.py
