--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ matplotlib~=3.7.4
 moviepy~=1.0.3
 numpy~=1.24
 openpyxl>=3.0.0
-pandas~=1.2.5
+pandas~=1.5.3,<2.0
 Pillow~=10.2.0
 pycromanager~=0.32
 pysimplegui~=4.60.5
@@ -22,7 +22,7 @@ scipy~=1.10.0
 seaborn~=0.11.1
 setuptools~=69.0.3
 Shapely~=1.7.1
-tifffile~=2023.7.10
+tifffile>=2023.1
 typer~=0.9.0
 vtk~=9.2.0
 wheel~=0.40
