--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 PyYAML~=6.0.1
 Shapely~=1.7.1
-aicsimageio~=4.14.0
 asyncpool~=1.0
 beautifulsoup4~=4.12.3
 bioio-ome-tiff~=1.0.0
@@ -16,11 +15,12 @@ openpyxl>=3.0.0
 pandas>=1.2
 pycromanager~=0.32
 pysimplegui~=4.60.5
+lxml>=5.3.0
 roifile~=2023.5.12
 scikit-image~=0.21.0
 scipy~=1.10.0
 seaborn~=0.11.1
 setuptools~=69.0.3
-tifffile~=2023.7.10
+tifffile>=2023
 vtk~=9.2.0
 wheel~=0.40
