--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ lmfit~=1.3.1
 moviepy~=1.0.3
 numpy~=1.24
 openpyxl>=3.0.0
-pandas>=1.2
+pandas>=1.2,<2.0
 pycromanager~=0.32
 pysimplegui~=4.60.5
 lxml>=5.3.0
