--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,28 @@
-PyYAML~=6.0.1
-Shapely~=1.7.1
+PyYAML>=5.4.1
+Shapely>=1.7.1
 asyncpool~=1.0
-beautifulsoup4~=4.12.3
+beautifulsoup4>=4.0.0
 bioio-ome-tiff~=1.0.0
 bioio~=1.1.0
-czifile~=2019.7.2
-dask~=2023.5.0
-future~=0.18.2
+czifile>=2019.7.2
+dask>=2022
+future>=0.18.0
 imageio>2
-lmfit~=1.3.1
+lmfit>=1.3.1
+lxml>=5.3.0
+matplotlib>=3.4
 moviepy~=1.0.3
-numpy~=1.24
+numpy>=1.24,<2.0.0
 openpyxl>=3.0.0
 pandas>=1.2,<2.0
-pycromanager~=0.32
-pysimplegui~=4.60.5
-lxml>=5.3.0
-roifile~=2023.5.12
-scikit-image~=0.21.0
-scipy~=1.10.0
+pycromanager>=0.32
+roifile>=2023
+scikit-image>=0.18
+scipy>=1.10
 seaborn~=0.11.1
 setuptools~=69.0.3
 tabulate~=0.9.0
 tifffile>=2023
-typer~=0.9.0
-vtk~=9.2.0
+typer>=0.9.0
+vtk>9.2.0
 wheel~=0.40
