--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-PyYAML>=5.4.1
-Shapely>=1.7.1
 asyncpool~=1.0
 beautifulsoup4>=4.0.0
-bioio-ome-tiff~=1.0.0
 bioio~=1.1.0
+bioio-ome-tiff~=1.0.0
 czifile>=2019.7.2
 dask>=2022
 future>=0.18.0
@@ -17,11 +15,14 @@ openpyxl>=3.0.0
 pandas>=1.2,<2.0
 pandas-ods-reader~=1.0
 pycromanager>=0.32
+pyjavaz~=1.2.4
+PyYAML>=5.4.1
 roifile>=2023
 scikit-image>=0.18
 scipy>=1.10
 seaborn~=0.11.1
 setuptools~=69.0.3
+Shapely>=1.7.1
 tabulate~=0.9.0
 tifffile>=2023
 typer>=0.9.0
