--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ moviepy~=1.0.3
 numpy>=1.24,<2.0.0
 openpyxl>=3.0.0
 pandas>=1.2,<2.0
+pandas-ods-reader~=1.0
 pycromanager>=0.32
 roifile>=2023
 scikit-image>=0.18
